# crates/capsem-service/src/router_runtime.rs
@@ -35,6 +35,7 @@ pub(super) fn build_service_router(state: Arc<ServiceState>) -> Router {
         .route("/vms/list", get(handle_list))
         .route("/vms/{id}/info", get(handle_info))
         .route("/vms/{id}/status", get(handle_vm_status))
+        .route("/vms/{id}/container", get(container_setup::handle_container_status))
         .route("/vms/{id}/snapshots/status", get(handle_vm_snapshots_status))
         .route("/vms/{id}/snapshots/list", get(handle_vm_snapshots_list))
         .route("/vms/{id}/changes", get(handle_vm_changes))
